--- a/nav-horizontal.css
+++ b/nav-horizontal.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 1rem;
+  overflow-x: hidden;
 }
 
 .page-nav ul {
@@ -49,7 +50,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-left: auto;
+  margin: 1rem 0;
 }
 
 .social-links {
@@ -76,17 +77,12 @@
     flex-direction: column;
   }
 
-  .page-nav ul li {
-    width: 100%;
-  }
-
   .page-nav ul li a {
     font-size: 1.5rem;
     padding: 10px;
   }
 
   .nav-controls {
-    margin: 1rem 0;
     width: 100%;
     justify-content: center;
   }
